<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Optima.ViewAppOptimaActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/scrollView" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="4"
            android:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/initiator"
                android:id="@+id/textViewInitiatorView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textViewInitiator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/reason"
                android:id="@+id/textViewReasonView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/editTextReason"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/engineer"
                android:id="@+id/textViewEngineerView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/editTextEngineer"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/comment"
                android:id="@+id/textViewCommentView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/editTextComment"
                android:inputType="text" />
        </GridLayout>
    </ScrollView>

</RelativeLayout>
