<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Optima.AddAppOptimaActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/scrollView">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/obj"
                android:id="@+id/textViewObj" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:paddingLeft="3dp"
                android:id="@+id/spinnerObjects"
                android:spinnerMode="dialog"
                android:layout_gravity="fill_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/initiator"
                android:id="@+id/textViewInitiatorView" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:id="@+id/editTextInitiator"
                android:inputType="textCapSentences|text|textMultiLine"
                android:layout_gravity="fill_horizontal"
                android:maxLength="10000"
                android:maxLines="6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/reason"
                android:id="@+id/textViewReasonView" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:id="@+id/editTextReason"
                android:inputType="textCapSentences|text|textMultiLine"
                android:layout_gravity="fill_horizontal" />

        </GridLayout>

    </ScrollView>

</RelativeLayout>
